# libglot

./: .gitignore  CMakeLists.txt  CMakePresets.json  COMPREHENSIVE_TEST_EXPANSION_STATUS.md  CONTRIBUTING.md  FEATURE_COMPLETENESS_ANALYSIS.md  README.md  TEST_COVERAGE_ANALYSIS.md
bench/: PHASE_C2_RESULTS.md  PHASE_C3_RESULTS.md  baseline_comparison.csv  baseline_comparison.py  shim_baseline.json  shim_baseline_release.json
cmake/: libglotConfig.cmake.in
core/: CMakeLists.txt
core/include/libglot/: LIFETIME.md
core/include/libglot/ast/: node.h
core/include/libglot/dialect/: traits.h
core/include/libglot/hash/: compile_time.h  perfect_hash.h
core/include/libglot/lex/: spec.h  tokenizer.h
core/include/libglot/parse/: error_recovery.h  grammar.h  parser.h
core/include/libglot/util/: arena.h  intern.h
docs/: ARCHITECTURE.md  CONTRIBUTING.md  LOGGLOT_PLAN.md  SQL_MIGRATION_LOG.md
mime/: CMakeLists.txt
mime/benchmarks/: bench_mime_parsing.cpp
mime/include/libglot/mime/: anomalies.h  ast_nodes.h  charset.h  complete_features.h  encoding.h  grammar.h  header_folding.h  limits.h  mime_type_validator.h  parser.h  parser_extended.h  parser_with_anomalies.h  tokens.h
mime/tests/: CMakeLists.txt  test_address_groups.cpp  test_boundary_recovery.cpp  test_external_body.cpp  test_header_comments.cpp  test_mime_encoding.cpp  test_mime_multipart.cpp  test_mime_parser.cpp  test_rfc2231_continuations.cpp
sql/: CMakeLists.txt
sql/benchmarks/: CMakeLists.txt  bench_optimizer.cpp  benchmark_roundtrip.cpp
sql/include/libglot/sql/: ast_complete.gen.py  ast_nodes.h  complete_features.h  dialect_traits.h  dialect_transforms.h  generator.h  grammar.h  optimizer.h  parser.h  token_spec.h  tokens.h
sql/tests/: CMakeLists.txt  fix_all_tests.py  fix_ported.py  migrate_tests_v2.py  port_tests.sed  test_advanced_sql.cpp  test_all_dialects_comprehensive.cpp  test_arena.cpp  test_assignments.cpp  test_begin_end_blocks.cpp  test_connect_by.cpp  test_create_procedure.cpp  test_cte_windows_subqueries.cpp  test_cube.cpp  test_cursors.cpp  test_date_trunc.cpp  test_debug_pivot.cpp  test_declare_keyword.cpp  test_delimiter.cpp  test_dialect_coverage.cpp  test_dialect_feature_combinations.cpp  test_dialect_transforms.cpp  test_dialect_transpilation.cpp  test_dialect_transpilation_ported.cpp  test_dialect_transpilation_temp.cpp  test_dml_statements.cpp  test_end_to_end.cpp  test_error_messages.cpp  test_error_recovery.cpp  test_exceptions.cpp  test_extract.cpp  test_fk_check_constraints.cpp  test_for_keyword.cpp  test_for_loop.cpp  test_for_while_transpile.cpp  test_grant_revoke.cpp  test_grouping_sets.cpp  test_if_statement.cpp  test_intern.cpp  test_json_operations.cpp  (+29 more)
